Fix User Feedback button overlapping issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -219,3 +219,6 @@
 .w-md-editor-toolbar {
     padding: 10px !important;
 }
+#sentry-feedback{
+    --inset: auto auto 0 auto !important;
+}
